hydroflow/tests/compile-fail/surface_syntax_paren_indexing.stderr
error: unexpected end of input, expected parentheses or identifier
 --> tests/compile-fail/surface_syntax_paren_indexing.rs:5:35
  |
5 |         (source_iter(0..10) -> [0]);
  |                                   ^
